<resources>
    <string name="app_name">Quote App</string>
    
    <string name="write_label">Enter keywords to generate a quote:</string>
    <string name="write_keywords_hint">gaming, grind, success</string>
    <string name="write_generate">Generate Quote!</string>

    <string name="write_status_in_progress">Your quote is being generated…</string>
    <string name="write_status_error">An error occurred! Reason:</string>
    <string name="write_status_success">Your quote is generated!</string>
    <string name="write_status_error_placeholder">Unknown error</string>

    <string name="quote_back">Back</string>
    <string name="quote_content_placeholder">Your quote here</string>
    <string name="quote_copy_content">Copy Quote</string>
    <string name="quote_regenerate">Re-Generate</string>
    <string name="quote_keywords_label">Used keywords:</string>
    <string name="quote_keywords_placeholder">Your keywords here</string>
    <string name="quote_remove">Remove Quote</string>
    <string name="quote_date">Made on: %s</string>

    <string name="list_label">Saved Quotes</string>
    <string name="list_no_items">No Quotes</string>

    <string name="item_content">I\'m walking on the sun, with the stars on my shoulders and the wind in my hair. Or some other complicated metaphor.</string>
    <string name="item_date">Yesterday</string>
    <string name="item_format">%s • %s</string>

    <string name="settings_label">Settings</string>
    <string name="settings_swiped_label">Confirm Swipe Deletion</string>
    <string name="settings_swiped_description">Confirm the deletion of quotes in lists after swiping it to the left</string>
    <string name="settings_in_quote_label">Confirm In-Quote Deletion</string>
    <string name="settings_in_quote_description">Confirm the deletion of quotes in a quote view window</string>
    <string name="settings_clear">Delete ALL Quotes</string>
    <string name="settings_notification_label">Remind after: %s</string>
    <string name="settings_notification_off">don\'t remind</string>
    <string name="settings_notification_daily">a day without use</string>
    <string name="settings_notification_weekly">a week without use</string>
    <string name="settings_notification_monthly">a month without use</string>
    <string name="settings_notification_ask_title">Allow notifications</string>
    <string name="settings_notification_ask_desc">This app needs you to allow sending notifications, so that it can remind you to use it</string>
    <string name="settings_notification_ask_ok">OK</string>
    <string name="settings_notification_description">How often to remind you to use this app after a certain period without use. Click to go through different options</string>
    
    <string name="delete_title">Confirm Delete</string>
    <string name="delete_description">Are you sure you want to delete this Quote?</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_no">Cancel</string>

    <string name="clear_title">Confirm Clear</string>
    <string name="clear_description">Are you sure you want to permanently delete all Quotes?</string>
    <string name="clear_description_2">Are you really sure you want to PERMANENTLY delete ALL Quotes?</string>

    <string name="sort_date_desc">New first</string>
    <string name="sort_date_asc">Old first</string>
    <string name="sort_quote_asc">Quote Alphabetical</string>
    <string name="sort_quote_desc">Quote Backwards</string>
    <string name="sort_kw_asc">Keywords Alphabetical</string>
    <string name="sort_kw_desc">Keywords Backwards</string>

    <!-- three lines -->
    <string name="long_string">Word Word Word Word Word Word Word Word Word Word Word Word Word Word Word Word Word</string>
</resources>
