<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/quote_back"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_m"

        style="@style/BackButton"/>

    <TextView
        android:id="@+id/quote_date"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_m"
        android:layout_marginBottom="@dimen/margin_m"

        android:text="@string/quote_date"
        android:textSize="@dimen/subtitle_text_size"
        android:textColor="@color/divider"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="@dimen/margin_m"

        android:background="@drawable/top_rounded_surface"
        android:backgroundTint="@color/divider">

        <TextView
            android:id="@+id/quote_content"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_m"

            android:text="@string/quote_content_placeholder"
            style="@style/Text.Title" />

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_m"
        android:background="?attr/colorOnBackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quote_copy_content"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_m"
            android:text="@string/quote_copy_content"
            app:icon="@drawable/copy"
            style="@style/BottomRoundedButton"/>

        <View
            android:layout_width="3dp"
            android:layout_height="1dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quote_regenerate"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_m"
            android:text="@string/quote_regenerate"
            app:icon="@drawable/regenerate"
            style="@style/BottomRoundedButton"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"

        android:text="@string/quote_keywords_label"
        style="@style/Text.Subtitle"/>

    <LinearLayout
        android:orientation="horizontal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"

        style="@style/BackgroundSurface">

        <TextView
            android:id="@+id/quote_keywords"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_m"

            android:text="@string/quote_keywords_placeholder"
            android:maxLines="3"
            android:ellipsize="end"
            style="@style/Text.Subtitle"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:background="@color/on_background"/>

        <ImageButton
            android:id="@+id/quote_copy_keywords"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_s"
            android:padding="5dp"

            android:src="@drawable/copy"
            android:background="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            style="@style/Icon"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/quote_delete"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"

        android:text="@string/quote_remove"
        app:icon="@drawable/delete"
        style="@style/DeleteButton"/>

</LinearLayout>
