<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/write_label"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_m"

            android:text="@string/write_label"
            style="@style/Text.Title"/>

        <EditText
            android:id="@+id/write_keywords"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/margin_m"

            android:hint="@string/write_keywords_hint"
            style="@style/LargeEditText"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/write_generate"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_m"

            android:text="@string/write_generate"
            style="@style/AccentButton" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/write_status"
        android:visibility="invisible"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:background="@color/dark"/>

        <ProgressBar
            android:id="@+id/write_status_progress"
            android:visibility="invisible"

            android:layout_width="52dp"
            android:layout_height="52dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:indeterminateTint="@color/divider"/>

        <ImageView
            android:id="@+id/write_status_icon"
            android:visibility="visible"

            android:layout_width="52dp"
            android:layout_height="52dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:src="@drawable/close"
            app:tint="@color/red"/>

        <TextView
            android:id="@+id/write_status_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/write_status_icon"

            android:text="@string/write_status_error"
            android:textColor="@color/red"
            style="@style/Text.Subtitle.CenteredAndLimited"/>

        <TextView
            android:id="@+id/write_status_error_message"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/write_status_text"

            android:text="@string/write_status_error_placeholder"
            android:textColor="@color/red"
            style="@style/Text.Subtitle.CenteredAndLimited"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
